--- a/index.html
+++ b/index.html
@@ -4,16 +4,14 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>MyWebsite</title>
+    <title>|Refnaldy|</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="width=360, initial-scale=1">
 
     <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/refnaldy.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
     <link rel="stylesheet" href="./assets/css/font.css" />
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script src="./assets/js/fontawesome-all.js"></script>
-    <script src="./assets/js/refnaldy.js"></script>
+    <link rel="stylesheet" href="./assets/css/comment.css" />
     <style>
         body,
         h1,
@@ -254,12 +252,32 @@
                             </div>
                         </div>
                     </div>
+                    <div class="ref-row ref-padding-large">
+                        <div class="ref-third ref-padding-small ref-card ref-hover-shadow">
+                            <a href="https://drive.google.com/open?id=1Y902l2xS2-lVGH6_LokPfgCFDBaKNqrL" target="_blank">
+                                <img src="./assets/photo/Laporan/lap9.PNG" class="ref-image ref-opacity ref-hover-opacity-off" alt="laporan9" style="width:100%">
+                            </a>
+                            <div class="ref-row ref-container ref-disabled">
+                                <i class="fas fa-eye"></i> Program MultiChat
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <footer class="ref-container ref-ligh-grey">
                     <p></p>
                 </footer>
             </div>
         </div>
+        </div>
+        <!-- begin wwww.htmlcommentbox.com -->
+        <div style="background-color: #87CEEB; padding: 20px">
+            <h3 style="margin-left: 10px">Comment</h3>
+            <div id="HCB_comment_box">
+                <a href="http://www.htmlcommentbox.com">Comment Form</a> is loading comments...
+            </div>
+            <link rel="stylesheet" type="text/css" href="//www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
+            <script type="text/javascript" id="hcb"> /*<!--*/ if (!window.hcb_user) { hcb_user = {}; } (function () { var s = document.createElement("script"), l = hcb_user.PAGE || ("" + window.location).replace(/'/g, "%27"), h = "//www.htmlcommentbox.com"; s.setAttribute("type", "text/javascript"); s.setAttribute("src", h + "/jread?page=" + encodeURIComponent(l).replace("+", "%2B") + "&mod=%241%24wq1rdBcg%240EDAdZYI2FbAbnB1oXC490" + "&opts=16862&num=10&ts=1524856933416"); if (typeof s != "undefined") document.getElementsByTagName("head")[0].appendChild(s); })(); /*-->*/ </script>
+            <!-- end www.htmlcommentbox.com -->
         </div>
 
         <!-- Third Parallax Image -->
@@ -321,7 +339,10 @@
                 <i class="fas fa-heart" style="color: red ;"></i>
             </div>
         </footer>
-
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script src="./assets/js/fontawesome-all.js"></script>
+<script src="./assets/js/refnaldy.js"></script>
+<script src="./assets/js/comment-hcb.js"></script>
 
     </body>
 
