ganti index dan assets

--- a/index.html
+++ b/index.html
@@ -182,21 +182,21 @@
                 <div class="ref-container">
                     <div class="ref-row ref-padding-large">
                         <div class="ref-third ref-padding-small ref-card ref-hover-shadow">
-                            <a href="https://drive.google.com/open?id=1EHAZK6jeQ4UmMTNb1Tg3lVP22ApFEHDp" target="_blank"> <img src="./assets/photo/Laporan/lap1.PNG" class="ref-image ref-opacity ref-hover-opacity-off" alt="laporan1" style="width:100%">
+                            <a href="https://drive.google.com/open?id=1EHAZK6jeQ4UmMTNb1Tg3lVP22ApFEHDp" target="_blank" rel="noopener"> <img src="./assets/photo/Laporan/lap1.PNG" class="ref-image ref-opacity ref-hover-opacity-off" alt="laporan1" style="width:100%">
                             </a>
                             <div class="ref-row ref-container ref-disabled">
                                 <i class="fas fa-eye"></i> Ip-Address
                             </div>
                         </div>
                         <div class="ref-third ref-padding-small ref-card ref-hover-shadow">
-                            <a href="https://drive.google.com/open?id=1DstiAZpKTsGdaTYRUMeBrkKAsdXaR04p" target="_blank"> <img src="./assets/photo/Laporan/lap2.PNG" class="ref-image ref-opacity ref-hover-opacity-off" alt="laporan2" style="width:100%">
+                            <a href="https://drive.google.com/open?id=1DstiAZpKTsGdaTYRUMeBrkKAsdXaR04p" target="_blank" rel="noopener"> <img src="./assets/photo/Laporan/lap2.PNG" class="ref-image ref-opacity ref-hover-opacity-off" alt="laporan2" style="width:100%">
                             </a>
-                            <div class="ref-row ref-container ref-disabled ref-responsive">
+                            <div class="ref-row ref-container ref-disabled">
                                 <i class="fas fa-eye"></i> Display Net
                             </div>
                         </div>
                         <div class="ref-third ref-padding-small ref-card ref-hover-shadow">
-                            <a href="https://drive.google.com/open?id=1yFV99fyNKJ6HrqQ1T-tlp-biXZFiRhfU" target="_blank"> <img src="./assets/photo/Laporan/lap3.PNG" class="ref-image ref-opacity ref-hover-opacity-off" alt="laporan3" style="width:100%">
+                            <a href="https://drive.google.com/open?id=1yFV99fyNKJ6HrqQ1T-tlp-biXZFiRhfU" target="_blank" rel="noopener"> <img src="./assets/photo/Laporan/lap3.PNG" class="ref-image ref-opacity ref-hover-opacity-off" alt="laporan3" style="width:100%">
                             </a>
                             <div class="ref-row ref-container ref-disabled">
                                 <i class="fas fa-eye"></i> Info Server
@@ -205,21 +205,21 @@
                     </div>
                     <div class="ref-row-padding ref-padding-large">
                         <div class="ref-third ref-padding-small ref-card ref-hover-shadow">
-                            <a href="https://drive.google.com/open?id=1GBOg41kbWztL0tYC3hPwozprzC4qTvWw" target="_blank"> <img src="./assets/photo/Laporan/lap4.PNG" class="ref-image ref-opacity ref-hover-opacity-off" alt="laporan4" style="width:100%">
+                            <a href="https://drive.google.com/open?id=1GBOg41kbWztL0tYC3hPwozprzC4qTvWw" target="_blank" rel="noopener"> <img src="./assets/photo/Laporan/lap4.PNG" class="ref-image ref-opacity ref-hover-opacity-off" alt="laporan4" style="width:100%">
                             </a>
                             <div class="ref-row ref-container ref-disabled">
                                 <i class="fas fa-eye"></i> Info Client
                             </div>
                         </div>
                         <div class="ref-third ref-padding-small ref-card ref-hover-shadow">
-                            <a href="https://drive.google.com/open?id=12GafKXeFqpyvD5OGwFLqFr7_e5gfNMln" target="_blank"> <img src="./assets/photo/Laporan/lap5.PNG" class="ref-image ref-opacity ref-hover-opacity-off" alt="laporan5" style="width:100%">
+                            <a href="https://drive.google.com/open?id=12GafKXeFqpyvD5OGwFLqFr7_e5gfNMln" target="_blank" rel="noopener"> <img src="./assets/photo/Laporan/lap5.PNG" class="ref-image ref-opacity ref-hover-opacity-off" alt="laporan5" style="width:100%">
                             </a>
                             <div class="ref-row ref-container ref-disabled">
                                 <i class="fas fa-eye"></i>Chat Server
                             </div>
                         </div>
                         <div class="ref-third ref-padding-small ref-card ref-hover-shadow ">
-                            <a href="https://drive.google.com/open?id=107UotTWN3WWir0GVcJ5DSiiMQwr-2TEE" target="_blank"> <img src="./assets/photo/Laporan/lap6.PNG" class="ref-image ref-opacity ref-hover-opacity-off" alt="laporan6" style="width:100%">
+                            <a href="https://drive.google.com/open?id=107UotTWN3WWir0GVcJ5DSiiMQwr-2TEE" target="_blank" rel="noopener"> <img src="./assets/photo/Laporan/lap6.PNG" class="ref-image ref-opacity ref-hover-opacity-off" alt="laporan6" style="width:100%">
                             </a>
                             <div class="ref-row ref-container ref-disabled">
                                 <i class="fas fa-eye"></i> Chat Client
@@ -228,7 +228,7 @@
                     </div>
                     <div class="ref-row ref-padding-large">
                         <div class="ref-third ref-padding-small ref-card ref-hover-shadow">
-                            <a href="https://drive.google.com/open?id=16O0iHaD9myRoveVx78C8MbYBqTKp9-YJ" target="_blank">
+                            <a href="https://drive.google.com/open?id=16O0iHaD9myRoveVx78C8MbYBqTKp9-YJ" target="_blank" rel="noopener">
                                 <img src="./assets/photo/Laporan/lap7.PNG" class="ref-image ref-opacity ref-hover-opacity-off" alt="laporan7" style="width:100%">
                             </a>
                             <div class="ref-row ref-container ref-disabled">
@@ -236,7 +236,7 @@
                             </div>
                         </div>
                         <div class="ref-third ref-padding-small ref-card ref-hover-shadow">
-                            <a href="https://drive.google.com/open?id=1ZmazIdTngfUWFrNDcftDWYJ9A4m8uei4" target="_blank">
+                            <a href="https://drive.google.com/open?id=1ZmazIdTngfUWFrNDcftDWYJ9A4m8uei4" target="_blank" rel="noopener">
                                 <img src="./assets/photo/Laporan/lap7.PNG" class="ref-image ref-opacity ref-hover-opacity-off" alt="laporan7" style="width:100%">
                             </a>
                             <div class="ref-row ref-container ref-disabled ref-responsive">
@@ -244,7 +244,7 @@
                             </div>
                         </div>
                         <div class="ref-third ref-padding-small ref-card ref-hover-shadow">
-                            <a href="https://drive.google.com/open?id=1jpbrNXwt5Vc3P7r3ufcr2AVv_bFcrtFa" target="_blank">
+                            <a href="https://drive.google.com/open?id=1jpbrNXwt5Vc3P7r3ufcr2AVv_bFcrtFa" target="_blank" rel="noopener">
                                 <img src="./assets/photo/Laporan/lap8.PNG" class="ref-image ref-opacity ref-hover-opacity-off" alt="laporan8" style="width:100%">
                             </a>
                             <div class="ref-row ref-container ref-disabled">
@@ -254,11 +254,19 @@
                     </div>
                     <div class="ref-row ref-padding-large">
                         <div class="ref-third ref-padding-small ref-card ref-hover-shadow">
-                            <a href="https://drive.google.com/open?id=1Y902l2xS2-lVGH6_LokPfgCFDBaKNqrL" target="_blank">
+                            <a href="https://drive.google.com/open?id=1Y902l2xS2-lVGH6_LokPfgCFDBaKNqrL" target="_blank" rel="noopener">
                                 <img src="./assets/photo/Laporan/lap9.PNG" class="ref-image ref-opacity ref-hover-opacity-off" alt="laporan9" style="width:100%">
                             </a>
                             <div class="ref-row ref-container ref-disabled">
                                 <i class="fas fa-eye"></i> Program MultiChat
+                            </div>
+                        </div>
+                      <div class="ref-third ref-padding-small ref-card ref-hover-shadow">
+                            <a href="https://drive.google.com/open?id=1ewuR1_eLKU4GhH1KNWL37wWWRhyaawbG" target="_blank" rel="noopener">
+                                <img src="./assets/photo/Laporan/lap9.PNG" class="ref-image ref-opacity ref-hover-opacity-off" alt="laporan9" style="width:100%">
+                            </a>
+                            <div class="ref-row ref-container ref-disabled">
+                                <i class="fas fa-eye"></i> Program MultiChat New
                             </div>
                         </div>
                     </div>
